Prevent scrollbar flashes during Monaco Editor resizes

--- a/src/App/wwwroot/css/app.css
+++ b/src/App/wwwroot/css/app.css
@@ -31,6 +31,9 @@ html, body {
     font-size: var(--type-ramp-base-font-size);
     line-height: var(--type-ramp-base-line-height);
     height: 100%;
+
+    /* Prevent scrollbar flashes during Monaco Editor resizes. */
+    overflow: hidden;
 }
 
 body {
